lab1/Test/L1-A-10-75.output
Error Type A at Line 1
Error Type A at Line 9
Error Type B at Line 16
Error Type B at Line 23
Error Type B at Line 28
Error Type B at Line 31
Error Type B at Line 40
