lab1/Test/L1-A-10-75.cmm
int OMBs5x [ 560280141 ] %, pG4p9nHX94OQVs 

;
int ;
struct {
  float MnkvBC07ElU9ZrzbgEK = YF28ANuW || WOVti16t 
    && oHhszOQfZyKKGv_IWiTR >= PRJLP8yqRX1VcYpDfX + XFy4_85_dUIoJbxrce 
    / ! BInW ( xWPESNr8cLQz , JXaDlDh0k98xhCliIz = KGwX3uP 
    %= cNWG3o4D > - McCNQO0ea [ D9xy - - MV ( Dl7GFL44hFCwQDeJ4l 
    = qRtrFCLICN == ! ( Zm3Esc7iNvwR8EV = EfeEpZ20gIdN9Ww 
    <= - - - BGpx4pkwLiXfrxJ8Ypl ( LLESDTpWonKE_vV7HB 
    != L5L ) / ! FG26yg0Q1g4AYK2NLTU < 1213765918 ) ) 
    - 1595555404.1380408138 * - c ( ) ] . yahJDL5atlqeC 
    ) , Q3tgUq6vcJ1JT_auz ;
}heSsxD ( ) {
}|| 
int ;
struct G6McDyl9I0oqzUZXuei ;
int ;
int EzFhxIaBz5 ( int VwJkXGD , int dPwZ_0BwL0JSziCP 
  ) {
  return BLLVqVOa1CLq ;
;}
struct {
  int IyhMh_ ;
  int QsgXVThw ;
  int PwpomwTpc5dgDpb ;
  struct lJEryhM != {
  }PBUv9H ;
  int smDrf ;
  int xKba2 bMvhWCfnqjiL ;
  int XeLG4h_f0UswbPVvuO7 ;
};
int R_mZw4ffCu3jRvFQ ( ) {
  if ( ZBvd8hBR )   n_hLNdus3mAnsLjREde ;
else   if ( _w )   if ( T )   while ( iF0K )   dh76U34PCyGbOr5EV5kW 
    ;

else   {
  }, 



}
int ;
int ;
